<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="@string/toolbar_title_detail" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorAccent"
                android:gravity="center_vertical"
                android:hint="@string/title"
                android:paddingLeft="@dimen/title_padding"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/title_size" />

            <LinearLayout
                android:id="@+id/basic_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:minHeight="@dimen/layout_height"
                android:orientation="horizontal"
                android:weightSum="5">


                <ImageView

                    android:id="@+id/poster"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:paddingLeft="@dimen/poster_padding"
                    android:paddingTop="@dimen/poster_padding" />

                <LinearLayout

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/info_layout_padding_left"
                    android:paddingTop="@dimen/info_layout_padding_top">

                    <TextView
                        android:id="@+id/releaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/releaseDate"
                        android:textSize="@dimen/release_date_text_size" />


                    <TextView
                        android:id="@+id/vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/vote_average_padding_top"
                        android:text="@string/voteAverage"
                        android:textSize="@dimen/vote_average_text_size"
                        android:textStyle="bold" />
                    <ImageView
                        android:id="@+id/imageViewFavorite"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/not_favorite"
                        android:layout_marginTop="7dp"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/overview_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/basic_info"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/overview"
                    android:padding="@dimen/overview_padding" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/overview_layout"
                android:orientation="vertical"
                tools:ignore="UnknownId">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:hint="@string/trailer" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:paddingTop="1dp"
                    android:scrollbars="vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/reviews"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewReviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:paddingTop="1dp"
                    android:scrollbars="vertical" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>